add lec14 orthogonal vectors notebook.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
     "cSpell.words": [
         "besselj",
+        "charpoly",
+        "Columnspace",
         "combsimp",
         "dfdx",
+        "Diagonalization",
+        "diffeq",
         "dotprint",
         "dsolve",
+        "eigenvals",
+        "eigenvects",
         "evalf",
         "Exponentials",
         "gammasimp",
@@ -17,16 +23,21 @@
         "logcombine",
         "mathml",
         "mathprofessorquotes",
+        "Mul’s",
         "nonlinsolve",
         "Nonsquare",
+        "postorder",
         "powdenest",
         "powsimp",
+        "preorder",
         "repr",
+        "semidefinite",
         "solveset",
         "squishification",
         "srepr",
         "sympify",
-        "trigsimp"
+        "trigsimp",
+        "uexpr"
     ],
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#cae8ba",
