add projection plot and formula.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "logcombine",
         "mathml",
         "mathprofessorquotes",
+        "meshgrid",
         "Mul’s",
         "nonlinsolve",
         "Nonsquare",
@@ -31,6 +32,7 @@
         "powsimp",
         "preorder",
         "repr",
+        "scaleratio",
         "semidefinite",
         "solveset",
         "squishification",
