--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "evalf",
         "Exponentials",
         "gammasimp",
+        "gapminder",
         "Graphviz",
         "gridlines",
         "hyperexpand",
@@ -27,6 +28,7 @@
         "Mul’s",
         "nonlinsolve",
         "Nonsquare",
+        "Percap",
         "postorder",
         "powdenest",
         "powsimp",
