--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "logcombine",
         "mathml",
         "mathprofessorquotes",
+        "meijerg",
         "meshgrid",
         "Mul’s",
         "nonlinsolve",
