--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "besselj",
         "charpoly",
+        "coeff",
         "Columnspace",
         "combsimp",
         "dfdx",
@@ -17,6 +18,7 @@
         "gapminder",
         "Graphviz",
         "gridlines",
+        "Hadamard",
         "hyperexpand",
         "integ",
         "lambdify",
